--- a/style.css
+++ b/style.css
@@ -1,4 +1,15 @@
-html {
-  height: 100%;
-  width: 100%;
+.header {
+  text-align: center;
+  display: block;
+}
+
+.section {
+  text-align: center;
+  display: block;
+  background-image:url() ;
+}
+
+.home-photo {
+position: middle;
+display:flex;
 }
