--- a/style.css
+++ b/style.css
@@ -1,15 +1,34 @@
 .header {
   text-align: center;
-  display: block;
 }
 
 .section {
   text-align: center;
-  display: block;
-  background-image:url() ;
+  background-image: url('');
 }
 
 .home-photo {
-position: middle;
-display:flex;
+  display: flex;
+  justify-content: center;  
+  align-items: center;      
+  flex-wrap: wrap;          
+}
+
+.home-photo img {
+  width: 45%;              
+  max-width: 300px;          
+  margin: 10px;              
+  border-radius: 10px;       
+}
+
+.footer {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.homepage {
+  display: flex;
+  flex-direction: column;    
+  align-items: center;       
 }
