this is ademo of ri 345
Co-authored-by: Muhtasim <Muhtasim19@users.noreply.github.com>

--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 .header {
   text-align: center;
+  background-color: gray;
 }
 
 .section {
+  display: block;
   text-align: center;
-  background-image: gray;
 }
 
 .home-photo {
