upadted full box

--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@
 .section {
   display: block;
   text-align: center;
+  background-color: gray; 
+  width: 100%;        
+  padding: 20px 0;   
+  box-sizing: border-box;
 }
 
 .home-photo {
