--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+header {
+  background-color: gray;
+  width: 100%;
+  padding: 20px 0;
+  box-sizing: border-box;
+}
+
 .header {
   display: block;
   text-align: center;
-  background-color: gray;
-  margin: 0px;
 }
 
 .section {
