--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 header {
-  background-color: gray;
   width: 100%;
   padding: 20px 0;
   box-sizing: border-box;
@@ -8,15 +7,19 @@ header {
 .header {
   display: block;
   text-align: center;
+  margin-bottom: 0px;
 }
 
 .section {
   display: block;
   text-align: center;
-  background-color: gray; 
+  background-color: black; 
   width: 100%;        
   padding: 20px 0;   
   box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-decoration-color: beige;
+  margin-top: 0px;
 }
 
 .home-photo {
@@ -43,7 +46,8 @@ header {
 .homepage {
   display: flex;
   flex-direction: column;    
-  align-items: center;       
+  align-items: center;     
+  margin-bottom: 0px; 
 }
 
 .back-home-button {
@@ -62,4 +66,10 @@ header {
 }
 .back-home-button:hover {
   background-color: rgb(255, 255, 255);
+}
+
+a {
+  color: rgb(255, 255, 255);
+  text-shadow: 5px;
+  font-family: fantasy , papyrus;
 }
