--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ a:hover {
   border: 1px solid black; /* Added solid border for clarity */
   border-radius: 5px;
   padding: 10px; /* Added padding for better appearance */
-  margin: 10px 0; /* Added margin for spacing */
+  margin: 1px 0; /* Added margin for spacing */
 }
 
 h1 {
@@ -106,7 +106,8 @@ h1 {
 }
 
 .submit-btn {
-  width: 100%;
+  text-align: center;
+  width: 100px;
   padding: 10px;
   background-color: #28a745;
   color: white;
@@ -114,6 +115,7 @@ h1 {
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
+  margin: 10px, 40%;
 }
 
 .submit-btn:hover {
