--- a/style.css
+++ b/style.css
@@ -129,3 +129,46 @@ h1 {
 .submit-btn:hover {
     background-color: #218838;
 }
+
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    margin: 0;
+    padding: 0;
+}
+
+.header {
+    background-color: #333;
+    color: #fff;
+    padding: 1em;
+    text-align: center;
+}
+
+.header a {
+    color: #fff;
+    margin: 0 15px;
+    text-decoration: none;
+}
+
+.section {
+    padding: 2em;
+}
+
+.footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1em;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+
+.homepage {
+    text-align: center;
+}
+
+.home-photo img {
+    margin: 1em;
+    border-radius: 8px;
+}
