--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ header {
   padding: 10px 20px;
   text-align: center;
   background-color: rgb(250, 250, 250);
-  color: black; /* Changed to black for contrast */
+  color: black;
   border: none;
   border-radius: 5px;
   font-size: 16px;
@@ -94,10 +94,10 @@ a:hover {
 
 .input {
   text-align: center;
-  border: 1px solid black; /* Added solid border for clarity */
+  border: 1px solid black;
   border-radius: 5px;
-  padding: 10px; /* Added padding for better appearance */
-  margin: 1px 0; /* Added margin for spacing */
+  padding: 10px;
+  margin: 1px 0;
 }
 
 h1 {
